rabbitmq/rmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: koyun
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Importante para servicios HTTPS
spec:
  rules:
  - host: rabbitmq.koyunco.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-cluster
            port:
              number: 15691
  tls:
  - hosts:
    - rabbitmq.koyunco.local
    secretName: rabbitmq-cert-secret
